[gd_scene load_steps=3 format=3 uid="uid://cafljq7j5mqh1"]

[ext_resource type="Script" path="res://Scripts/muenú_de_inicio.gd" id="1_tmb0x"]
[ext_resource type="Texture2D" uid="uid://dme24if8kotc0" path="res://images/Fondo1.jpeg" id="2_n1v3u"]

[node name="Muenú de inicio" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tmb0x")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0.00784314, 0.341176)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_n1v3u")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.497
anchor_top = 0.684
anchor_right = 0.497
anchor_bottom = 0.684
offset_left = -168.544
offset_top = -87.232
offset_right = 167.456
offset_bottom = 87.768
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 9

[node name="START" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "START"

[node name="INSTRUCTIONS" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "INSTRUCTIONS"

[node name="ABOUT US" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "SOBRE NOSOTROS"

[connection signal="pressed" from="VBoxContainer/START" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/INSTRUCTIONS" to="." method="_on_instructions_pressed"]
[connection signal="pressed" from="VBoxContainer/ABOUT US" to="." method="_on_about_us_pressed"]
